update paypal  & portofolio

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
     .facebook { background: #1877F2; }
     .github   { background: #333; }
     .instagram{ background: #833AB4; }
+    .paypal   { background: #003087;}
+    .portofoliio { background: #7C3AED;}
     .qris     { background: #ed133b; }
     .saweria  { background: #FF6500; }
     .telegram { background: #0088cc; }
@@ -155,6 +157,7 @@
   <div class="category-title">Portfolio</div>
   <div class="links">
     <a class="link github" href="https://github.com/KeishaXD">GitHub Project</a>
+    <a class="link portofoliio" href="https://keishaxd.github.io/portfolio.github.io/">Portofolio</a>
   </div>
 
   <!--SECTION: SOSIAL MEDIA-->
@@ -169,8 +172,8 @@
   <!--SECTION: DONATE-->
   <div class="category-title">Donate</div>
   <div class="links">
-    <a class="link qris" href="qris.html" target="_blank">Donate via QRIS</a>
-    <a class="link saweria" href="https://saweria.co/Keisha">Saweria</a>
+    <a class="link qris" href="qris.html" target="_blank">QRIS</a>
+    <a class="link paypal" href="paypal.html">Paypal</a>
   </div>
 
   <!-- EMAIL (kategori terpisah) -->
