--- a/paypal.html
+++ b/paypal.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 <body>
-  <img src="https://raw.githubusercontent.com/KeishaXD/keishaxd.github.io/main/asset/pict/paypal.html" alt="Paypal QR Code" />
+  <img src="https://raw.githubusercontent.com/KeishaXD/keishaxd.github.io/main/asset/pict/paypal.png" alt="Paypal QR Code" />
   <script>
     // Sinkronisasi mode gelap/terang dengan localStorage
     function setInitialMode() {
