update paypal & favicon

--- a/paypal.html
+++ b/paypal.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>QRIS KeishaXD</title>
+  <link rel="icon" type="image/png"
+        href="https://raw.githubusercontent.com/KeishaXD/keishaxd.github.io/main/asset/pict/favicon.png" />
+
   <style>
     body {
       background: #E2CEB1;
