--- a/qris.html
+++ b/qris.html
@@ -2,7 +2,10 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>QRIS KeishaXD</title>
+  <title>Paypal KeishaXD</title>
+  <link rel="icon" type="image/png"
+        href="https://raw.githubusercontent.com/KeishaXD/keishaxd.github.io/main/asset/pict/favicon.png" />
+
   <style>
     body {
       background: #E2CEB1;
