fix index.htnl + merge portofolio

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <body>
 
   <!-- FOTO PROFIL -->
-  <img src="https://raw.githubusercontent.com/KeishaXD/keishaxd.github.io/main/asset/pict/header.jpg"
+  <img src="asset/pict/header.jpg"
        alt="Foto Profil" class="profile-pic" />
 
   <h1>KeishaXD</h1>
@@ -174,30 +174,30 @@
   <!-- PORTFOLIO -->
   <div class="category-title">Portfolio</div>
   <div class="links">
-    <a class="link github" href="https://github.com/KeishaXD">GitHub Project</a>
-    <a class="link portofoliio" href="https://keishaxd.github.io/portfolio.github.io/">Portofolio</a>
+    <a class="link github" href="https://github.com/KeishaXD" target="_blank">GitHub Project</a>
+    <a class="link portofoliio" href="portfolio/portofolio.html" target="_blank">Portofolio</a>
   </div>
 
   <!-- SOCIAL MEDIA -->
   <div class="category-title">Social Media</div>
   <div class="links">
-    <a class="link facebook" href="https://facebook.com/JovallinKRD">Facebook</a>
-    <a class="link instagram" href="https://instagram.com/jkrd.ig">Instagram</a>
-    <a class="link telegram" href="https://t.me/keishaxd">Telegram</a>
-    <a class="link youtube" href="https://youtube.com/keduakolo">YouTube</a>
+    <a class="link facebook" href="https://facebook.com/JovallinKRD" target="_blank">Facebook</a>
+    <a class="link instagram" href="https://instagram.com/jkrd.ig" target="_blank">Instagram</a>
+    <a class="link telegram" href="https://t.me/keishaxd" target="_blank">Telegram</a>
+    <a class="link youtube" href="https://youtube.com/keduakolo" target="_blank">YouTube</a>
   </div>
 
   <!-- DONATE -->
   <div class="category-title">Donate</div>
   <div class="links">
     <a class="link qris" href="qris.html" target="_blank">QRIS</a>
-    <a class="link paypal" href="paypal.html">Paypal</a>
+    <a class="link paypal" href="paypal.html" target="_blank">Paypal</a>
   </div>
 
   <!-- KONTAK -->
   <div class="category-title">Kontak</div>
   <div class="links">
-    <a class="link email" href="mailto:blackopolotong@gmail.com">Email</a>
+    <a class="link email" href="mailto:blackopolotong@gmail.com" target="_blank">Email</a>
   </div>
 
   <footer>&copy; 2025 KeishaXD</footer>
