--- a/paypal.html
+++ b/paypal.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Paypal - KeishaXD</title>
   <link rel="icon" type="image/png"
-        href="https://raw.githubusercontent.com/KeishaXD/keishaxd.github.io/main/asset/pict/favicon.png" />
+        href="asset/pict/paypal.png" />
 
   <style>
     body {
