--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   <div class="category-title">Portfolio</div>
   <div class="links">
     <a class="link github" href="https://github.com/KeishaXD" target="_blank">GitHub Project</a>
-    <a class="link portofoliio" href="portfolio/portofolio.html" target="_blank">Portofolio</a>
+    <a class="link portofoliio" href="portofolio/portofolio.html" target="_blank">Portofolio</a>
   </div>
 
   <!-- SOCIAL MEDIA -->
