update inex, add store, update porto

--- a/portofolio/portofolio.html
+++ b/portofolio/portofolio.html
@@ -211,21 +211,21 @@
 <section id="activity">
   <h3>Riwayat Keaktifan</h3>
   <div class="card">
-    <p>Silakan isi pengalaman organisasi, kepanitiaan, komunitas, atau kegiatan lainnya di sini.</p>
+    <p>Silakan lihat pengalaman organisasi, kepanitiaan, komunitas, atau kegiatan lainnya di sini.</p>
     <br>
     <a href="krp.html" target="blank" class="btn">Lihat Detail Keaktifan</a>
   </div>
 </section>
 
-<!-- RIWAYAT PENDIDIKAN -->
+<!-- RIWAYAT PEKERJAAN -->
 <section id="work-experience">
   <h3>Riwayat Pekerjaan</h3>
   <div class="card">
     <ul>
-      <li>............................</li>
-      <li>............................</li>
-      <li>............................</li>
-      <li>............................</li>
+    <p>• Membantu operasional toko kelontong milik orang tua (2013–2015)</p>
+    <p>• Membantu operasional toko roti milik orang tua (2017–2020)</p>
+    <p>• Membantu pengelolaan kios ayam geprek milik orang tua (2023–2024)</p>
+
     </ul>
   </div>
 </section>
@@ -238,19 +238,19 @@
     <div class="card">
       <h4>Hard Skills</h4>
       <ul>
-        <li>HTML, Phyton, JavaScript (Basic)</li>
-        <li>Git & GitHub</li>
-        <li>WebUI Magisk</li>
-        <li>Reverse Engineering (Basic)</li>
+        <p>• HTML, Phyton, JavaScript (Basic)</p>
+        <p>• Git & GitHub</p>
+        <p>• WebUI Magisk</p>
+        <p>• Reverse Engineering (Basic)</p>
       </ul>
     </div>
     <div class="card">
       <h4>Soft Skills</h4>
       <ul>
-        <li>Problem Solving</li>
-        <li>Manajemen Waktu</li>
-        <li>Kerja Tim</li>
-        <li>Komunikasi</li>
+        <p>• Problem Solving</p>
+        <p>• Manajemen Waktu</p>
+        <p>• Kerja Tim</p>
+        <p>• Komunikasi</p>
       </ul>
     </div>
   </div>
@@ -280,8 +280,6 @@
   <h3>Kontak</h3>
   <div class="card">
     <p>Email: jovallin.krd@gmail.com</p>
-    <p>LinkedIn: linkedin.com/in/yourprofile</p>
-    <p>Website: yourwebsite.com</p>
   </div>
 </section>
 
