--- a/qris.html
+++ b/qris.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>QRIS - KeishaXD</title>
   <link rel="icon" type="image/png"
-        href="asset/pict/qris-code.png" />
+        href="asset/pict/favicon.png" />
 
   <style>
     body {
@@ -33,7 +33,7 @@
   </style>
 </head>
 <body>
-  <img src="https://raw.githubusercontent.com/KeishaXD/keishaxd.github.io/main/asset/pict/qris-code.png" alt="QRIS Code" />
+  <img src="asset/pict/qris-code.png" alt="QRIS Code" />
   <script>
     // Sinkronisasi mode gelap/terang dengan localStorage
     function setInitialMode() {
