--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     .github   { background: #333; }
     .instagram{ background: #833AB4; }
     .paypal   { background: #003087; }
-    .portofoliio { background: #7C3AED; }
+    .portofolio { background: #7C3AED; }
     .qris     { background: #ed133b; }
     .saweria  { background: #FF6500; }
     .telegram { background: #0088cc; }
@@ -175,7 +175,7 @@
   <div class="category-title">Portfolio</div>
   <div class="links">
     <a class="link github" href="https://github.com/KeishaXD" target="_blank">GitHub Project</a>
-    <a class="link portofoliio" href="portofolio/portofolio.html" target="_blank">Portofolio</a>
+    <a class="link portofolio" href="portofolio/portofolio.html" target="_blank">Portofolio</a>
   </div>
 
   <!-- SOCIAL MEDIA -->
@@ -200,7 +200,7 @@
     <a class="link email" href="mailto:blackopolotong@gmail.com" target="_blank">Email</a>
   </div>
 
-  <footer>&copy; 2025 KeishaXD</footer>
+  <footer>&copy; 2026 KeishaXD</footer>
 
   <!-- THEME SCRIPT -->
   <script>
