--- a/portofolio/krp.html
+++ b/portofolio/krp.html
@@ -158,7 +158,7 @@ th {
         <div>Kartu Rencana Prestasi (KRP)</div>
     </div>
 
-    <button class="header-btn" onclick="window.location.href='index.html'">
+    <button class="header-btn" onclick="window.location.href='portofolio.html'">
         ⬅ Kembali ke Portofolio
     </button>
 
