--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     .portofolio { background: #7C3AED; }
     .qris     { background: #ed133b; }
     .saweria  { background: #FF6500; }
+    .store  { background: #42B549; }
     .telegram { background: #0088cc; }
     .youtube  { background: #FF0000; }
 
@@ -176,6 +177,12 @@
   <div class="links">
     <a class="link github" href="https://github.com/KeishaXD" target="_blank">GitHub Project</a>
     <a class="link portofolio" href="portofolio/portofolio.html" target="_blank">Portofolio</a>
+  </div>
+
+  <!-- STORE -->
+  <div class="category-title">Store</div>
+  <div class="links">
+    <a class="link store" href="store/store.html" target="_blank">Keisha Store</a>
   </div>
 
   <!-- SOCIAL MEDIA -->
