--- a/store/store.html
+++ b/store/store.html
@@ -4,171 +4,172 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Keisha Store - Layanan Jasa Joki</title>
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:'Poppins',sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
-body{
-  background:#0f172a;
-  color:white;
+body {
+  background: #0f172a;
+  color: #ffffff;
 }
 
-header{
-  background:#111827;
-  padding:20px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
+header {
+  background: #111827;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.logo{
-  font-size:20px;
-  font-weight:700;
-  color:#22d3ee;
+.logo {
+  font-size: 20px;
+  font-weight: 700;
+  color: #22d3ee;
 }
 
-nav a{
-  margin-left:20px;
-  text-decoration:none;
-  color:white;
-  font-weight:500;
-  transition:0.3s;
+nav a {
+  margin-left: 20px;
+  text-decoration: none;
+  color: #ffffff;
+  font-weight: 500;
+  transition: 0.3s;
 }
 
-nav a:hover{
-  color:#22d3ee;
+nav a:hover {
+  color: #22d3ee;
 }
 
-section{
-  padding:60px 20px;
-  max-width:1200px;
-  margin:auto;
+section {
+  padding: 60px 20px;
+  max-width: 1200px;
+  margin: auto;
 }
 
-h2{
-  margin-bottom:25px;
-  color:#22d3ee;
+h2 {
+  margin-bottom: 25px;
+  color: #22d3ee;
 }
 
 /* HERO */
-.hero{
-  text-align:center;
-  padding:80px 20px;
+.hero {
+  text-align: center;
+  padding: 80px 20px;
 }
 
-.hero h1{
-  font-size:40px;
-  margin-bottom:10px;
+.hero h1 {
+  font-size: 40px;
+  margin-bottom: 10px;
 }
 
-.hero p{
-  color:#9ca3af;
+.hero p {
+  color: #9ca3af;
 }
 
-/* SLIDER JOKI */
-.slider{
-  display:flex;
-  overflow-x:auto;
-  gap:20px;
-  scroll-behavior:smooth;
+/* CARD */
+.card {
+  min-width: 250px;
+  background: #1e293b;
+  padding: 20px;
+  border-radius: 12px;
+  transition: 0.3s;
 }
 
-.slider::-webkit-scrollbar{
-  height:6px;
+.card:hover {
+  transform: translateY(-5px);
+  background: #334155;
 }
 
-.slider::-webkit-scrollbar-thumb{
-  background:#22d3ee;
-  border-radius:10px;
+.card h3 {
+  margin-bottom: 10px;
 }
 
-.card{
-  min-width:250px;
-  background:#1e293b;
-  padding:20px;
-  border-radius:12px;
-  transition:0.3s;
-  flex-shrink:0;
+.card-img {
+  width: 100%;
+  aspect-ratio: 16 / 9;
+  object-fit: cover;
+  border-radius: 8px 8px 0 0;
+  margin-bottom: 10px;
 }
 
-.card:hover{
-  transform:translateY(-5px);
-  background:#334155;
+
+.price {
+  margin: 10px 0;
+  font-weight: bold;
+  color: #10b981;
 }
 
-.card h3{
-  margin-bottom:10px;
+.btn {
+  display: inline-block;
+  padding: 8px 14px;
+  background: #22d3ee;
+  color: #000000;
+  text-decoration: none;
+  border-radius: 6px;
+  font-weight: 600;
+  transition: 0.3s;
+  cursor: pointer;
 }
 
-.price{
-  margin:10px 0;
-  font-weight:bold;
-  color:#10b981;
+.btn:hover {
+  background: #06b6d4;
 }
 
-.btn{
-  display:inline-block;
-  padding:8px 14px;
-  background:#22d3ee;
-  color:black;
-  text-decoration:none;
-  border-radius:6px;
-  font-weight:600;
-  transition:0.3s;
-  cursor:pointer;
+/* GRID */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
 }
 
-.btn:hover{
-  background:#06b6d4;
+@media (max-width: 768px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
 }
 
-/* TOP UP GRID */
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-  gap:20px;
-}
 
 /* JOKI CUSTOM */
-.order{
-  margin-top:50px;
-  text-align:center;
+.order {
+  margin-top: 50px;
+  text-align: center;
 }
 
-.order input{
-  padding:10px;
-  margin:10px;
-  border-radius:6px;
-  border:none;
-  width:250px;
+.order input {
+  padding: 10px;
+  margin: 10px;
+  border-radius: 6px;
+  border: none;
+  width: 250px;
 }
 
-.order input:focus{
-  outline:2px solid #22d3ee;
+.order input:focus {
+  outline: 2px solid #22d3ee;
 }
 
 /* FOOTER */
-footer{
-  text-align:center;
-  padding:20px;
-  background:#111827;
-  margin-top:40px;
-  color:#9ca3af;
+footer {
+  text-align: center;
+  padding: 20px;
+  background: #111827;
+  margin-top: 40px;
+  color: #9ca3af;
 }
 
-@media(max-width:768px){
-  .hero h1{
-    font-size:28px;
+@media (max-width: 768px) {
+  .hero h1 {
+    font-size: 28px;
   }
 }
 </style>
 </head>
+
 
 <body>
 
@@ -182,23 +183,26 @@ footer{
 </header>
 
 <section class="hero">
-  <h1>Store Layanan Jasa Joki</h1>
+  <h1>Keisha Store – Jasa Joki Game</h1>
   <p>Cepat - Aman - Harga Bersahabat</p>
 </section>
 
-<!-- ================= TOP UP SECTION ================= -->
+<!-- ================= Joki Best Seller ================= -->
 <section id="popular">
   <h2>🔥 Best Seller</h2>
 
   <div class="grid">
 
-    <div class="card">
-      <h3>Joki Genshin Impact</h3>
-      <div class="price">Mulai Rp 3.000</div>
-      <a class="btn" onclick="orderWA('Top Up Diamond ML')">Joki Sekarang</a>
-    </div>
+  <div class="card">
+    <img src="asset/genshin.webp" alt="Joki Genshin Impact" class="card-img">
+    <h3>Joki Genshin Impact</h3>
+  <div class="price">Mulai Rp 3.000</div>
+    <a class="btn" onclick="orderWA('Joki Genshin Impact')">Joki Sekarang</a>
+  </div>
+
 
     <div class="card">
+      <img src="asset/wuwa.webp" alt="Joki Wuthering Wave" class="card-img">
       <h3>Joki Wuthering Wave</h3>
       <div class="price">Mulai Rp 3.000</div>
       <a class="btn" onclick="orderWA('Top Up Valorant Points')">Joki Sekarang</a>
@@ -207,7 +211,7 @@ footer{
   </div>
 </section>
 
-<!-- ================= TOP UP SECTION ================= -->
+<!-- ================= Service Joki ================= -->
 <section id="joki">
   <h2>🎮 Layanan Joki</h2>
 
@@ -215,36 +219,42 @@ footer{
   
       <div class="card">
       <h3>Joki Genshin Impact</h3>
+        <img src="asset/genshin.webp" alt="Joki Genshin Impact" class="card-img">
       <div class="price">Mulai Rp 3.000</div>
       <a class="btn" onclick="orderWA('Top Up Diamond ML')">Joki Sekarang</a>
     </div>
 
     <div class="card">
       <h3>Joki Wuthering Wave</h3>
+        <img src="asset/wuwa.webp" alt="Joki Wuthering Wave" class="card-img">
       <div class="price">Mulai Rp 3.000</div>
       <a class="btn" onclick="orderWA('Top Up Valorant Points')">Joki Sekarang</a>
     </div>
 
     <div class="card">
       <h3>Joki Honkai Star Rail</h3>
+        <img src="asset/hsr.webp" alt="Joki Genshin Impact" class="card-img">
       <div class="price">Mulai Rp 3.000</div>
       <a class="btn" onclick="orderWA('Top Up Valorant Points')">Joki Sekarang</a>
     </div>
 
     <div class="card">
       <h3>Joki Mobile Legend</h3>
+        <img src="asset/mlbb.webp" alt="Joki Genshin Impact" class="card-img">
       <div class="price">Mulai Rp 10.000</div>
       <a class="btn" onclick="orderWA('Top Up Diamond ML')">Joki Sekarang</a>
     </div>
 
     <div class="card">
       <h3>Joki Free Fire</h3>
+        <img src="asset/ff.webp" alt="Joki Genshin Impact" class="card-img">
       <div class="price">Mulai Rp 10.000</div>
       <a class="btn" onclick="orderWA('Top Up Valorant Points')">Joki Sekarang</a>
     </div>
 
     <div class="card">
       <h3>Joki PUBGM</h3>
+        <img src="asset/pubgm.webp" alt="Joki Genshin Impact" class="card-img">
       <div class="price">Mulai Rp 10.000</div>
       <a class="btn" onclick="orderWA('Top Up UC PUBG')">Joki Sekarang</a>
     </div>
