update krp + upload sertif

--- a/portofolio/krp.html
+++ b/portofolio/krp.html
@@ -281,31 +281,37 @@ th {
             <th>Aksi</th>
         </tr>
         <tr>
-            <td class="number-col">1</td>
-            <td>PKKMB 2025</td>
-            <td>Tingkat Universitas sebagai Peserta
-Judul kegiatan "Langkah Awal Meraih Cita: Bersama Pendidikan Membangun Masa Depan" dilaksanakan pada 19 Agustus 2025 oleh Fakultas Ilmu Sosial dan Ilmu Politik Universitas Negeri Surabaya</td>
-            <td>2025</td>
-            <td>1</td>
-            <td><button class="btn">Detail</button></td>
-        </tr>
+        <td class="number-col">1</td>
+        <td>PKKMB 2025</td>
+        <td>Tingkat Universitas sebagai Peserta<br>
+            Judul kegiatan "Glory Education: Pelopor Kampus, Pilar Kemajuan Bangsa" dilaksanakan pada 19 Agustus 2025 oleh Universitas Negeri Surabaya</td>
+        <td>2025</td>
+        <td>1</td>
+        <td>
+            <a href="asset/sertif/sem1/pkkmb-univ.pdf" target="_blank" class="btn">Detail</a>
+        </td>
+    </tr>
         <tr>
             <td class="number-col">2</td>
             <td>PKKMB 2025</td>
-            <td>Tingkat Universitas sebagai Peserta
-Judul kegiatan "Glory Education: Pelopor Kampus, Pilar Kemajuan Bangsa" dilaksanakan pada 19 Agustus 2025 oleh Universitas Negeri Surabaya</td>
+            <td>Tingkat Universitas sebagai Peserta<br>
+                Judul kegiatan "Langkah Awal Meraih Cita: Bersama Pendidikan Membangun Masa Depan" dilaksanakan pada 19 Agustus 2025 oleh Fakultas Ilmu Sosial dan Ilmu Politik Universitas Negeri Surabaya</td>
             <td>2025</td>
             <td>1</td>
-            <td><button class="btn">Detail</button></td>
+        <td>
+            <a href="asset/sertif/sem1/pkkmb-fakultas.pdf" target="_blank" class="btn">Detail</a>
+        </td>
         </tr>
         <tr>
             <td class="number-col">3</td>
             <td>PKKMB 2025</td>
-            <td>Tingkat Universitas sebagai Peserta
-Judul kegiatan "Menggali Potensi Menguatkan Solidaritas: Civics Euphoria sebagai Panggung Kreasi Mahasiswa" dilaksanakan pada 11 Oktober 2025 oleh HMP Pendidikan Pancasila dan Kewarganegaraan Fakultas Ilmu Sosial dan Ilmu Politik</td>
+            <td>Tingkat Universitas sebagai Peserta<br>
+                Judul kegiatan "Menggali Potensi Menguatkan Solidaritas: Civics Euphoria sebagai Panggung Kreasi Mahasiswa" dilaksanakan pada 11 Oktober 2025 oleh HMP Pendidikan Pancasila dan Kewarganegaraan Fakultas Ilmu Sosial dan Ilmu Politik</td>
             <td>2025</td>
             <td>1</td>
-            <td><button class="btn">Detail</button></td>
+        <td>
+            <a href="asset/sertif/sem1/pkkmb-prodi.pdf" target="_blank" class="btn">Detail</a>
+        </td>
         </tr>
     </table>
 
@@ -434,7 +440,7 @@ Judul kegiatan "Merajut Nasionalisme dan Solidaritas Sosial Ditengah Dinamika Gl
         <tr>
             <td class="number-col">6</td>
             <td>Mengikuti Kuliah Tamu</td>
-            <td>Judul kegiatan "Satu Ide Beribu Dampak: Menumbuhkan Jiwa Inovatif dan Kreatif Mahasiswa melalui PKM Multidispliner" dilaksanakan pada 03 November 2025 oleh Program Studi S1 Pendidikan Pancasila dan Kewarganegaraan Fakultas Ilmu Sosial dan ilmu Politik, Universitas Negeri Surabaya</td>
+            <td>Judul kegiatan Becoming Responsible Digital Citizenship in the ASEAN Region: Ethics, Literacy, and Civic Engagement dilaksanakan pada 17 Nopember 2025 oleh Program Studi S1 Pendidikan Pancasila dan Kewarganegaraan Fakultas Ilmu Sosial dan ilmu Politik, Universitas Negeri Surabaya</td>
             <td>2025</td>
             <td>1</td>
             <td><button class="btn">Detail</button></td>
@@ -524,7 +530,7 @@ Judul kegiatan "Improvement Softskill Webinar" dilaksanakan pada 21 Desember 202
             <td class="number-col">16</td>
             <td>Mengikuti Kegiatan/ Forum Ilmiah (Seminar, Lokakarya, Workshop, Pameran)</td>
             <td>Tingkat Nasional sebagai Peserta
-Judul kegiatan Future Enterpreneur Indonesia Summit dilaksanakan pada 21 Desember 2025 oleh Growt Insight X Future Enterpreneur Summit</td>
+Judul kegiatan "Future Enterpreneur Indonesia Summit dilaksanakan pada 21 Desember 2025" oleh Growt Insight X Future Enterpreneur Summit</td>
             <td>2025</td>
             <td>1</td>
             <td><button class="btn">Detail</button></td>
@@ -596,7 +602,7 @@ Judul kegiatan Ai For Automation : n8n Untuk yang Lebih Terstruktur dilaksanakan
             <td class="number-col">24</td>
             <td>Mengikuti Kegiatan/ Forum Ilmiah (Seminar, Lokakarya, Workshop, Pameran)</td>
             <td>Tingkat Nasional sebagai Peserta
-Judul kegiatan Ai For Everyone : Roadmap 100 Juta Pertama dari Ai dilaksanakan pada 07 Februari 2026 oleh Ai For Everyone</td>
+Judul kegiatan AI For Content Creator : Konsisten Upload Tanpa Burnout dilaksanakan pada 05 Februari 2026 oleh AI For Everyone</td>
             <td>2026</td>
             <td>2</td>
             <td><button class="btn">Detail</button></td>
@@ -605,7 +611,7 @@ Judul kegiatan Ai For Everyone : Roadmap 100 Juta Pertama dari Ai dilaksanakan p
             <td class="number-col">25</td>
             <td>Mengikuti Kegiatan/ Forum Ilmiah (Seminar, Lokakarya, Workshop, Pameran)</td>
             <td>Tingkat Nasional sebagai Peserta
-Judul kegiatan AI For Content Creator : Konsisten Upload Tanpa Burnout dilaksanakan pada 05 Februari 2026 oleh AI For Everyone</td>
+Judul kegiatan Ai For Everyone : Roadmap 100 Juta Pertama dari Ai dilaksanakan pada 07 Februari 2026 oleh Ai For Everyone</td>
             <td>2026</td>
             <td>2</td>
             <td><button class="btn">Detail</button></td>
