--- a/store/store.html
+++ b/store/store.html
@@ -178,7 +178,7 @@ footer {
   <nav>
     <a href="#">Home</a>
     <a href="#joki">Joki</a>
-    <a href="#topup">Top Up</a>
+    <a href="#custom">Custom</a>
   </nav>
 </header>
 
@@ -197,7 +197,7 @@ footer {
     <img src="asset/genshin.webp" alt="Joki Genshin Impact" class="card-img">
     <h3>Joki Genshin Impact</h3>
   <div class="price">Mulai Rp 3.000</div>
-    <a class="btn" onclick="orderWA('Joki Genshin Impact')">Joki Sekarang</a>
+    <a href="order-genshin.html" class="btn">Joki Sekarang</a>
   </div>
 
 
@@ -217,12 +217,12 @@ footer {
 
   <div class="grid">
   
-      <div class="card">
-      <h3>Joki Genshin Impact</h3>
-        <img src="asset/genshin.webp" alt="Joki Genshin Impact" class="card-img">
-      <div class="price">Mulai Rp 3.000</div>
-      <a class="btn" onclick="orderWA('Top Up Diamond ML')">Joki Sekarang</a>
-    </div>
+  <div class="card">
+    <img src="asset/genshin.webp" alt="Joki Genshin Impact" class="card-img">
+    <h3>Joki Genshin Impact</h3>
+  <div class="price">Mulai Rp 3.000</div>
+    <a href="order-genshin.html" class="btn">Joki Sekarang</a>
+  </div>
 
     <div class="card">
       <h3>Joki Wuthering Wave</h3>
@@ -264,6 +264,7 @@ footer {
 
 
   <!-- ===== JOKI CUSTOM ===== -->
+   <section id="custom"></section>
   <div class="order">
     <h2> Cari Joki Lain ? <br> Coba Joki Custom</h2>
     <input type="text" id="nama" placeholder="Nama">
